fix: unit and integration tests